@startuml 考试管理模块类图

!theme plain
left to right direction
skinparam linetype polyline
skinparam nodesep 30
skinparam ranksep 40
skinparam packageStyle rectangle
skinparam shadowing false

package "用户与课程" as UC {
  class User {
    - id: Long
    - username: String
    - password: String
    - nickname: String
    - avatar: String
    - role: String
    - status: String
    - createdAt: LocalDateTime
    - deleted: Integer
  }
  User -down- Course : teaches
  User -down- CourseMember : student
  Course -down- CourseMember : members
}

package "试卷与题目" as PQ {
  class Paper {
    - id: Long
    - name: String
    - description: String
    - courseId: Long
    - teacherId: Long
    - totalScore: BigDecimal
    - type: String
    - status: String
    - createdAt: LocalDateTime
    - deleted: Integer
  }
  class PaperQuestion {
    - questionId: Long
    - score: BigDecimal
  }
  class Question {
    - id: Long
    - content: String
    - type: String
    - difficulty: String
    - score: BigDecimal
    - teacherId: Long
    - subject: String
    - explanation: String
    - deleted: Integer
  }
  class Option {
    - id: String
    - text: String
  }
  class ScoringCriterion {
    - point: String
    - score: BigDecimal
  }
  Paper *-down- PaperQuestion
  Question *-down- Option
  Question *-down- ScoringCriterion
  PaperQuestion ..> Question : ref
}

package "考试与作答" as ES {
  class Exam {
    - id: Long
    - title: String
    - description: String
    - courseId: Long
    - paperId: Long
    - teacherId: Long
    - startedAt: LocalDateTime
    - endedAt: LocalDateTime
    - duration: Integer
    - totalScore: BigDecimal
    - passScore: BigDecimal
    - status: String
    - createdAt: LocalDateTime
    - deleted: Integer
  }
  class ExamSession {
    - id: Long
    - version: Integer
    - examId: Long
    - studentId: Long
    - startedAt: LocalDateTime
    - submittedAt: LocalDateTime
    - score: BigDecimal
    - totalScore: BigDecimal
    - status: String
    - gradingStatus: String
  }
  class Answer {
    - questionId: Long
    - answer: String
    - isCorrect: Boolean
    - score: BigDecimal
    - questionType: String
    - gradingStatus: String
    - teacherComment: String
  }
  Exam -down- ExamSession : examId
  ExamSession *-down- Answer
  Answer ..> Question : ref
}

' ─── 跨包关联 ───
User -[hidden]right- Paper
User ..> Exam : creates
Course ..> Exam : contains
Paper ..> Exam : used by
User ..> Paper : creates
Course ..> Paper : contains
User ..> Question : creates
User ..> ExamSession : takes

@enduml